--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "template-demo",
+  "name": "galactic-age-calculator",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --mode=development",
-    "start": "npm run build & webpack-dev-server --open --mode development",
-    "lint": "eslint src/*.js",
-    "test": "jest --coverage"
+  "description": "",
+  "main": "webpack.config.js",
+  "dependencies": {
+    "bootstrap": "^4.6.0",
+    "eslint-loader": "^3.0.0",
+    "fsevents": "^1.2.13",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1"
   },
-  "jest": {
-    "collectCoverage": true,
-    "coverageReporters": ["html"]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
-    "eslint-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.0",
@@ -29,10 +23,13 @@
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "3.8.0"
   },
-  "dependencies": {
-    "bootstrap": "^4.6.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+  "scripts": {
+    "build": "webpack",
+    "start": "npm run build & webpack-dev-server --open --mode development",
+    "lint": "eslint src/*.js",
+    "test": "jest --coverage"
   },
-  "description": ""
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
